<resources>
    <string name="mainLabel">Login</string>
    <string name="number">Enter Number</string>
    <string name="Enter">Enter</string>
    <string name="password">Enter Password</string>
    <string name="signup">Sign up</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="cPass">Confirm Password</string>
    <string name="name">Enter Name</string>
</resources>