<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20sp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/mainLabel"
            android:textColor="#BF9B16"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="100sp"
            android:layout_marginEnd="20sp"
            android:layout_marginRight="20sp"
            android:ems="10"
            android:hint="@string/number"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:ems="10"
            android:hint="@string/Enter"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEnter"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginRight="20sp"
                android:layout_weight="1"
                android:text="@string/Enter" />

            <Button
                android:id="@+id/signUp"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:layout_weight="1"
                android:text="@string/signup" />
        </LinearLayout>

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>